SHRINKWRAP-161 Changed ClassLoader to have a internal URLStreamHandler to avoid relying on a subset of VFS.